IN-1: Fix dark mode greeting, add gap to buttons

--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -37,6 +37,7 @@
 .button-greeting-div {
   display: flex;
   margin-top: 40px;
+  gap: 8px;
 }
 .download-link-button {
   text-decoration: none;
@@ -45,7 +46,7 @@
 .greeting-text {
   font-size: 70px;
   line-height: 1.1;
-  color: $textColor !important;
+  color: $textColor;
 }
 
 .greeting-text-p {
